--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,9 @@
     position: relative;
 }
 
+#navigation .logo{
+    cursor: pointer;
+}
 
 
 #navigation .links ul {
@@ -102,18 +105,19 @@
     width: 10%;
 }
 
-.close{
-    display: initial;
+#navigation .links .close {
+    display: block;
     position: absolute;
-    top: 30px;
-    left: 30px;
-    color:#fff ;
+    top: 0.5rem;
+    left: 20rem;
+    /* color: #fff; */
     font-size: 24px;
 }
 
 #mobile{
-    display: flex;
+    display: none;
     align-items: center;
+    cursor: pointer;
 }
 
 #mobile i{
@@ -910,7 +914,7 @@
     }
 
     #navigation .links{
-        display: none;
+        display: block;
     }
     
     #navigation .contact{
@@ -918,7 +922,7 @@
     }
 
     #mobile{
-        display: block;
+        display: none;
     }
 
     #mobile i{
@@ -973,10 +977,8 @@
     
     #navigation {
         display: flex;
-
+        position: relative;
     }
-
-
 
 
 
@@ -1015,6 +1017,80 @@
 
 @media (max-width: 576px) { 
 
+    #navigation{
+        position: relative;
+        transition: all .5s ease;
+    }
+
+    #navigation.sticky{
+        position: fixed;
+        min-height: 4rem;
+        width: 100%;
+        box-shadow: 0px 1px 10px -3px rgba(0,0,0,0.75);
+-webkit-box-shadow: 0px 1px 10px -3px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 1px 10px -3px rgba(0,0,0,0.75);
+        z-index: 999;
+    }
+
+    #navigation .links {
+        display: block;
+        position: absolute;
+        top: -50rem;
+        width: 100%;
+        height: 20rem;
+        background-color: white;
+        color: red;
+        left: 0;
+        z-index: 100;
+        transition:  all 1s ease-in-out;
+    }
+
+    #navigation .links ul {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 20rem;
+        /* padding-bottom: 1.5rem; */
+        position: relative;
+    }
+
+    #navigation .links ul a.close {
+        display: block;
+        position: absolute;
+        left: 22.5rem;
+        top: 1.5rem;
+    }
+
+    #navigation .links ul li {
+        padding-right: 0rem;
+        margin-top: 2rem;
+    }
+
+    #navigation .links ul li a{
+        color: black;
+        text-decoration: none;
+        text-transform: capitalize;
+        font-size: 1.1rem;
+    }
+
+
+    #navigation .links.active{
+       top: 0rem;
+       z-index: 100;
+    }
+
+    .close {
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 22rem;
+        color: #000;
+        font-size: 24px;
+    }
+
+    /* -------------------navigation end------------------- */
+
     #hero_container {
         min-height: 25rem;
     }
@@ -1035,10 +1111,7 @@
         padding: 0 2rem 0 2rem;
     }
 
-    #navigation .links{
-        display: none;
-    }
-    
+   
     #navigation .contact{
         display: none;
     }
@@ -1131,6 +1204,17 @@
 
 
 @media only screen and (max-width: 415px){
+    
+    
+    .close {
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 22rem;
+        color: #000;
+        font-size: 24px;
+    }
+    
     .h1-main {
         font-size: 2rem;
     }
